--- a/NoteApp1/MainPage.xaml
+++ b/NoteApp1/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:NoteApp1"
              x:Class="NoteApp1.MainPage"
-             Title="Your notes">
+             Title="Make new note">
 
     <Grid Padding="10">
         <!-- Place new controls here -->
